--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -1,26 +1,45 @@
 /**
  * Resume
  */
+.resume-name {
+    h1 {
+      font-weight: 400;
+      font-size: 60px;
+    }
+}
+
+.resume-contact {
+    text-align: right;
+    float: right;
+}
+
 .cloud-section {
-    margin-top: 10px;
+    margin-top: 5px;
     h3 {
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
     .primary {}
     .secondary {
         opacity: .5;
     }
 }
+.section {
+    h2 {
+        margin-bottom: 5px;
+        font-weight: 400;
+    }
+}
 
 .block {
-    padding: 30px 0;
+    padding: 5px 0;
 
     .main-row, .sub-row {
         display: block;
         clear: both;
         width: 100%;
         h1, h2, h3, h4, h5, h6 {
-            padding: 6px 0 0 0;
+            padding: 0 0 0 0;
+            margin-bottom: -5px;
         }
 
         .role, .org {
@@ -38,5 +57,16 @@
     ul {
         padding-top: 10px;
         clear: both;
+        li {
+            margin-bottom: -15px;
+        }
     }
+}
+
+// Hide Elements on Print
+@media print {
+    .no-print, .no-print * {
+        display: none !important;
+    }
+
 }
