Add link to download PDF of Resume

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+    <div class="resume-download no-print">
+      <a href="/assets/resume-kevin-reedy.pdf">Download PDF</a>
+    </div>
+    <br />
     <div class="resume-contact">
         <a href="mailto:{{ site.email }}">{{ site.email }}</a><br />
         <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">linkedin.com/in/{{ site.linkedin_username }}</a><br />
