Update about page

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -18,6 +18,6 @@
 
 .about-text p {
     text-align: justify;
-    -moz-text-align-last: justify;
-    text-align-last: justify;
+    -moz-text-align-last: left;
+    text-align-last: left;
 }
