automatically generate resume's pdf on build

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -2,7 +2,7 @@
 layout: default
 ---
     <div class="resume-download no-print">
-      <a href="/assets/resume-kevin-reedy.pdf">Download PDF</a>
+      <a href="/resume-kevin-reedy.pdf">Download PDF</a>
     </div>
     <br />
     <div class="resume-contact">
